[package]
name = "darknet-diaries-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt", "macros", "time", "fs"] }
reqwest = "0.11"
scraper = "0.13"
anyhow = "1.0"
regex = "1"
