[package]
name = "darknet-diaries-scraper"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt", "macros", "time", "fs"] }
reqwest = "0.11"
scraper = { version = "0.13", default-features = false }
anyhow = "1"
regex = { version = "1", default-features = false, features = ["std"] }
